<resources>
    <string name="app_name">أطلب و أستني</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">الأعداد</string>
    <string name="settings">الاعداد</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="homepage">الصفحه الرئيسيه</string>
    <string name="dash_board">متابعة أعمالك</string>
    <string name="post_project">أكتب طلباتك</string>
    <string name="customer_project">مشروعاتك</string>
    <string name="jop_search">البحث عن وظيف</string>
    <string name="log_out">تسجيل خروج</string>
    <string name="language">اللغه</string>
    <string name="about">عننا</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="sigin_in">تسجيل الدخول</string>
    <string name="defaultpassword"><a href="http://stackoverflow.com/questions/9852184/android-textview-hyperlink?rq=1">google stack overflow</a></string>
    <string name="myMoney">حسابى</string>
    <string name="SaveMoney">حسابك عندنا</string>
    <string name="totalAccount">رصيدك وصل</string>
    <string name="totalMoney">00.00 جنيه مصرى</string>
    <string name="yourAccount">حسابك عندنا</string>
    <string name="yourMoney">00.00 جنيه مصرى</string>
    <string name="numberOfBids">عدد المنقصات</string>
    <string name="remainBids">0</string>
    <string name="search_about_handCraft">البحث عن عامل</string>
    <string name="post_project_head">أطلب مشروعك معانا ببلاش !!</string>
    <string name="post_project_details">تفاصيل مشروعك ؟</string>
    <string name="post_project_details_hint">أنا محتاج ..</string>
    <string name="title_activity_post_project_main">PostProject</string>
    <string name="post_project_skills">مهارات ؟</string>
    <string name="post_project_skills_hint">المهارات التي يجب توفرها لتنفيذ مشروعك ..</string>
    <string name="post_project_category">اختار تصنيف للمشروع</string>
    <string name="post_project_title">عنوان مشروعك ؟</string>
    <string name="post_project_title_hint">برواز خشبي , علبه فضيه ...</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deliver_on">يسلم فى:</string>
    <string name="project_user_name">أسم العميل</string>
    <string name="more">المزيد...</string>
    <string name="second_post_project_head">محتاجين نعرف اكتر ..</string>
    <string name="post_project_buget">حتدفع لحد كام ؟</string>
    <string name="post_project_buget_coins">جنيه</string>
    <string name="post_project_date">محتاج طلبك في خلال قد ايه ؟</string>
    <string name="post_project_more_details">حابب توضح اكتر التفاصيل ؟</string>
    <string name="post_project_more_details_hint">محتاج اني استخدمها في ...</string>
    <string name="post_project_attachment_file">ضيف فايل او صوره توضح فكرتك اكتر</string>
    <string name="post_project_terms">أقبل بالشروط والاحكام</string>
    <string name="post_project_done_button">أطلب</string>
    <string name="post_project_next_button">التالي</string>
    <string name="days_string">أيام</string>
    <string name="two_weeks_string">أسبوعان</string>
    <string name="three_weeks_string">أسابيع</string>
    <string name="month_string">شهر</string>
    <string name="anytime_string">أي وقت</string>
    <string name="title_activity_profile">Edit Profile</string>
    <string name="change_pic_button_string">تغيير</string>
    <string name="profile_personal_information">ملفك الشخصي</string>
    <string name="profile_professinal_title">المسمي الوظيفي</string>
    <string name="profile_summary">نبذه عنك</string>
    <string name="profile_skills">مهاراتك</string>
    <string name="profile_phone">رقم الموبيل</string>
    <string name="profile_city">المحافظه</string>
    <string name="profile_street">العنوان</string>
    <string name="radio_male">ذكر</string>
    <string name="radio_female">أنثي</string>
    <string name="protolio_button_string">ملف اعمالي</string>
    <string name="title_activity_protoflio">ملف أعمالك</string>
    <string name="select_category_title">اختار فئه للعمل</string>
    <string name="portDescription">وصف للعمل</string>
    <string name="portfolio_information">أعرض افضل اعمالك</string>
    <string name="add_photos">أضف صوره او مجموعه صور لعملك</string>
    <string name="title_activity_custom_photo_gallery">اختار صور العمل</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">test</string>
    <string name="project_name">أسم المشروع</string>
    <string name="wanted_money_title">قابل للتفاوض</string>
    <string name="pids_title"> الطلبات المقدمه</string>
    <string name="number_of_pids">11</string>
    <string name="number_of_views">عدد المشاهدات</string>
    <string name="number_of_views_title">20</string>
    <string name="project_state">مفتوح</string>
    <string name="state_title">حالة المشروع</string>
    <string name="description">وبحلول الدّفاع لتقليعة على أي. يتم لم انتهت والكساد الإثنان, غضون شاسعة تلك ثم. ومن ألمّ ضمنها الشمال أم, الله إيطاليا مدن من, لهيمنة حاملات الإمتعاض بل حين. حول كل لهذه الباهضة ويكيبيديا. ما العالم تشيكوسلوفاكيا ومن. غير مارد وباءت ما.  و وبعد لعملة حتى, بحث ان الأمم يتبقّ الفرنسي, قبل بل أمام ابتدعها والفلبين. قد أما بداية أوروبا. في صفحة اكتوبر بالإنزال به،, بحق كل حقول وتنامت. قام ما إستعمل التبرعات, أي انه تسبب فشكّل النزاع.  شيء عن المارق باستحداث, أواخر أدوات التقليدية أن مكن. بحق بوابة علاقة مع, جُل مع أمام اتفاق, تلك في اللا الصعداء. إذ عدد فرنسية التحالف. ما الثالث مواقعها كلا, يتم ان مئات استراليا،, موالية تحرّكت مدن ثم. هو مايو محاولات الثانية نفس, تم به، ببعض ودول, الحرة اكتوبر جُل مع. من لفشل دأبوا تحرّك حول, قائمة البرية انه قد. الجوي وسمّيت التّحول ما بين, أدنى الإتفاقية و لكل. وبحلول الدّفاع لتقليعة على أي. يتم لم انتهت والكساد الإثنان, غضون شاسعة تلك ثم. ومن ألمّ ضمنها الشمال أم, الله إيطاليا مدن من, لهيمنة حاملات الإمتعاض بل حين. حول كل لهذه الباهضة ويكيبيديا. ما العالم تشيكوسلوفاكيا ومن. غير مارد وباءت ما.  و وبعد لعملة حتى, بحث ان الأمم يتبقّ الفرنسي, قبل بل أمام ابتدعها والفلبين. قد أما بداية أوروبا. في صفحة اكتوبر بالإنزال به،, بحق كل حقول وتنامت. قام ما إستعمل التبرعات, أي انه تسبب فشكّل النزاع.  شيء عن المارق باستحداث, أواخر أدوات التقليدية أن مكن. بحق بوابة علاقة مع, جُل مع أمام اتفاق, تلك في اللا الصعداء. إذ عدد فرنسية التحالف. ما الثالث مواقعها كلا, يتم ان مئات استراليا،, موالية تحرّكت مدن ثم. هو مايو محاولات الثانية نفس, تم به، ببعض ودول, الحرة اكتوبر جُل مع. من لفشل دأبوا تحرّك حول, قائمة البرية انه قد. الجوي وسمّيت التّحول ما بين, أدنى الإتفاقية و لكل.</string>
    <string name="posted_by_title">اسم العميل</string>
    <string name="review">التقيم</string>
    <string name="client_name">محمد</string>
    <string name="add_pids">أطلب أنك تعمل المشروع</string>
    <string name="title_activity_upload_image">UploadImageActivity</string>
    <string name="show_profile">ملفك الشخصي</string>
    <string name="alert">تنبيه</string>
    <string name="error_message">لا يمكن استرجاع البيانات تحقق من الانترنت</string>
    <string name="category_head">الفئات</string>
    <string name="jobs_head">الوظائف</string>
    <string name="workers_head">الموردين</string>
</resources>
