
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.iti.sidemenumodule.view.ProjectDetails"
    android:weightSum="1">

    <TextView android:text="@string/project_name"
        android:layout_width="match_parent"
        android:id="@+id/project_name_in_details"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/nliveo_black"
        android:gravity="center" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="119dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:background="@color/nliveo_black"
        tools:context="com.example.iti.sidemenumodule.view.ProjectDetails"
        android:gravity="center">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/nliveo_gray"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:layout_weight="1"
            tools:context="com.example.iti.sidemenumodule.view.ProjectDetails"
            android:gravity="center"
          >
        <TextView android:text="@string/totalMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/project_price"
            android:textSize="13sp"
            android:textColor="@color/nliveo_black"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp" />
            <TextView android:text="@string/wanted_money_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/price_title"
                android:textSize="12sp"
                android:textColor="@color/nliveo_black"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp" />
            </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/nliveo_gray"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:layout_weight="1"
            tools:context="com.example.iti.sidemenumodule.view.ProjectDetails"
            android:gravity="center">
            <TextView android:text="@string/number_of_pids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_name_intaidls"
                android:textSize="13sp"
                android:textColor="@color/nliveo_black"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp" />
            <TextView android:text="@string/pids_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_mde_intails"
                android:textSize="12sp"
                android:textColor="@color/nliveo_black"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/nliveo_gray"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:layout_weight="1"
            tools:context="com.example.iti.sidemenumodule.view.ProjectDetails"
            android:gravity="center">
            <TextView android:text="@string/number_of_views_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_name_indtails"
                android:textSize="13sp"
                android:textColor="@color/nliveo_black"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp" />
            <TextView android:text="@string/number_of_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_nade_intails"
                android:textSize="12sp"
                android:textColor="@color/nliveo_black"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/nliveo_gray"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:layout_weight="1"
            tools:context="com.example.iti.sidemenumodule.view.ProjectDetails"
            android:gravity="center">
            <TextView android:text="@string/project_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_namde_intails"
                android:textSize="13sp"
                android:textColor="@color/nliveo_black"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp" />
            <TextView android:text="@string/state_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_namde_ntails"
                android:textSize="12sp"
                android:textColor="@color/nliveo_black"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/description"
        android:id="@+id/project_description"
        android:layout_gravity="center_horizontal" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/nliveo_gray"
        android:layout_margin="5dp"
        tools:context="com.example.iti.sidemenumodule.view.ProjectDetails"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/posted_by_title"
            android:id="@+id/textView4"
            android:layout_gravity="end" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/client_name"
            android:id="@+id/client_name"
            android:layout_gravity="end" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/review"
            android:id="@+id/Review"
            android:layout_gravity="end"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/more"
            android:layout_gravity="start"
            android:id="@+id/more" />
        </LinearLayout>
</LinearLayout>
</ScrollView>