<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp">
    <FrameLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="#fff"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">
            <LinearLayout
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="32dp"
                    android:textColor="#454545"
                    android:gravity="center_horizontal"
                    android:layout_alignParentBottom="true"
                    android:text="@string/second_post_project_head" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textSize="24dp"
                    android:textColor="#454545"
                    android:layout_alignParentBottom="true"
                    android:text="@string/post_project_buget" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="4">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="24dp"
                        android:textColor="#454545"
                        android:layout_alignParentBottom="true"
                        android:text="@string/post_project_buget_coins"
                        android:layout_weight=".1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginRight="24dp"/>
                    <EditText
                        android:layout_marginBottom="24dp"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:id="@+id/project_budget_edittext"
                        android:layout_weight="16"
                        android:inputType="number"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textSize="24dp"
                    android:textColor="#454545"
                    android:layout_alignParentBottom="true"
                    android:text="@string/post_project_date" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#454545"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:textSize="@dimen/abc_text_size_headline_material"
                    android:background="@android:color/transparent"
                    android:id="@+id/date_spinner"
                    android:layout_marginBottom="24dp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textSize="24dp"
                    android:textColor="#454545"
                    android:layout_alignParentBottom="true"
                    android:text="@string/post_project_more_details" />



                <EditText
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:minLines="4"
                    android:gravity="top|right"
                    android:maxLines="8"
                    android:layout_marginBottom="24dp"
                    android:hint="@string/post_project_more_details_hint"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:scrollbars="vertical"
                    android:id="@+id/project_more_details_edittext"
                    />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#454545"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:textSize="24dp"
                    android:text="@string/post_project_attachment_file"
                    android:background="@android:color/transparent"
                    android:stateListAnimator="@null"
                    android:id="@+id/attachment_button"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_weight="4">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:textColor="#454545"
                    android:layout_marginRight="8dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/post_project_terms" />
                <CheckBox
                    android:layout_height="wrap_content"
                    android:textColor="#454545"
                    android:textSize="24dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="4dp"
                    android:textSize="24dp"
                    android:textColor="#454545"
                    android:layout_alignParentBottom="true"
                    android:text="" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_project_done_button"
        android:elevation="2dp"
        android:background="#368a8c"
        android:textSize="26dp"
        android:textColor="#fff"
        android:layout_gravity="bottom"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:id="@+id/done_button"
        />
</RelativeLayout>