<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iti.sidemenumodule.view.AddPortfolioItemFragment"
    android:background="#fcfcfc">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="26dp"
            android:textColor="#454545"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:text="@string/portfolio_information" />


        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="#fff"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:elevation="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="22dp"
                android:textColor="#454545"
                android:layout_alignParentBottom="true"
                android:text="@string/portDescription" />
            <EditText
                android:inputType="textMultiLine"
                android:lines="4"
                android:minLines="2"
                android:gravity="top|right"
                android:maxLines="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/summary_edittext"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="22dp"
                android:textColor="#454545"
                android:layout_alignParentBottom="true"
                android:text="@string/add_photos" />

                <LinearLayout
                    android:id="@+id/lnrImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/take_image_button"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:src="@mipmap/ic_camera"/>
            </LinearLayout>
        </LinearLayout>
        </ScrollView>

</FrameLayout>
